--- a/css/default.css
+++ b/css/default.css
@@ -45,6 +45,36 @@ button {
   width: 200px;
 }
 
+#left {
+  height: 550px;
+  z-index: 1;
+  position: absolute;
+  margin: 0 auto;
+  right: 45%;
+  bottom: -320px;
+  left: 150px;
+}
+
+#middle {
+  height: 550px;
+  z-index: 3;
+  position: absolute;
+  margin: 0 auto;
+  right: 0;
+  left: 0;
+  bottom: -270px;
+}
+
+#right {
+  height: 550px;
+  z-index: 1;
+  position: absolute;
+  margin: 0 auto;
+  left: 45%;
+  bottom: -320px;
+  right: 150px;
+}
+
 #schedule {
   font-size: 12px;
   color: white;
